lc126 finished